; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/hash/extr_dynahash.c_hash_select_dirsize.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/hash/extr_dynahash.c_hash_select_dirsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEF_FFACTOR = common dso_local global i64 0, align 8
@DEF_SEGSIZE = common dso_local global i64 0, align 8
@DEF_DIRSIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @hash_select_dirsize(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = sub nsw i64 %6, 1
  %8 = load i64, i64* @DEF_FFACTOR, align 8
  %9 = sdiv i64 %7, %8
  %10 = add nsw i64 %9, 1
  %11 = call i64 @next_pow2_long(i64 %10)
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* %3, align 8
  %13 = sub nsw i64 %12, 1
  %14 = load i64, i64* @DEF_SEGSIZE, align 8
  %15 = sdiv i64 %13, %14
  %16 = add nsw i64 %15, 1
  %17 = call i64 @next_pow2_long(i64 %16)
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* @DEF_DIRSIZE, align 8
  store i64 %18, i64* %5, align 8
  br label %19

19:                                               ; preds = %23, %1
  %20 = load i64, i64* %5, align 8
  %21 = load i64, i64* %4, align 8
  %22 = icmp slt i64 %20, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %19
  %24 = load i64, i64* %5, align 8
  %25 = shl i64 %24, 1
  store i64 %25, i64* %5, align 8
  br label %19

26:                                               ; preds = %19
  %27 = load i64, i64* %5, align 8
  ret i64 %27
}

declare dso_local i64 @next_pow2_long(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
